Fixed overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,14 @@
 
 body {
   background-color: var(--color-background);
+  overflow: auto;
+  margin: 0;
+  padding: 0;
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 /* button {
